<resources>
    <string name="app_name">KhadyaYatra</string>
    <string name="khadyayatra">Khadya Yatra</string>
    <string name="entermobno">Enter your 10 digit mobile number</string>
    <string name="enterpass">Enter your password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Dont have an account? Click Here</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboardfragment">DashboardFragment</string>
    <string name="frequently_asked_question">Frequently Asked Question</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="user_profile">User Profile</string>
    <string name="list_view">List View</string>
</resources>